parses quoted text from comment (in single test case)

--- a/popup/finder.html
+++ b/popup/finder.html
@@ -41,6 +41,6 @@
     <span id="version-label" class="gray-3"></span>
   </footer>
 </div>
-<script src="popup.js"></script>
+<script src="finder.js"></script>
 </body>
 </html>
